# gaussian-splatting

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  compare.py  convert_colmap_txt_to_bin.py  eval_combined.json  evaluate.py  export_hw4_sfm.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: docker-build.yml
src/evaluation/: __init__.py  metrics.py
src/gaussian/: __init__.py  gaussian_model.py
src/rendering/: __init__.py  renderer.py  sh_utils.py
src/training/: trainer.py
